# Surface-defect-detection-of-steel-using-computer-vision

./: .gitignore  README.md
steel-defect-project/: .gitignore  RAPOR.html  README.md  RESULTS_SUMMARY.md  pyproject.toml  requirements.txt
steel-defect-project/configs/: default.yaml
steel-defect-project/scripts/: evaluate.py  gradio_app.py  predict.py  train.py
steel-defect-project/src/steel_defect/: __init__.py  data.py  model.py  trainer.py  utils.py
